--- a/HwProj.Common/HwProj.Models/HwProj.Models.csproj
+++ b/HwProj.Common/HwProj.Models/HwProj.Models.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="File.TypeChecker" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
